--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://saify2j.github.io/cltcLive",
+  "homepage": "http://saify2j.github.io/cltc_live_class",
   "name": "cltc_live-web",
   "version": "3.0.0",
   "private": true,
